View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032442 | Open CASCADE | OCCT:Application Framework | public | 2021-06-15 18:18 | 2022-03-19 17:18 |
Reporter | bugmaster | Assigned To | mpv | ||
Priority | normal | Severity | minor | ||
Status | verified | Resolution | fixed | ||
Platform | arm64 | ||||
Product Version | 7.5.0 | ||||
Target Version | 7.7.0 | ||||
Summary | 0032442: Application Framework - Problems of testing on MacOS arm64 platform | ||||
Description | http://occt-tests/arm64/OCCT/2021-06-10/summary.html bugs caf bug23766_6 bugs caf bug23766_3 xml ocaf_xml C4 mXmlMNaming_NamingDriver: Cannot retrieve integer value of Index from "-1" mXmlDriver warning: failure reading attribute TNaming_Naming bugs caf bug27604 Error: the memory is not freed after Open/Close I checked on a lot of launches and occupied memory grows only. | ||||
Steps To Reproduce | Not required | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR32442 has been created by mpv. SHA-1: 06668c71dab490480b68aa10ae88737559a2aaeb Detailed log of new commits: Author: mpv Date: Thu Mar 10 11:57:41 2022 +0300 0032442: Application Framework - Problems of testing on MacOS arm64 platform Fixed the problem of reading XML files on MacOS. 'errno' was not reseted even the 'strtol' function produced a good value. So, now it is erased forcibly before the call. |
|
The first problem is fixed in CR32442 of OCCT, the problem of errno global variable reset: http://jenkins-test-occt.nnov.opencascade.com//view/CR32442-master-MPV/view/COMPARE/job/CR32442-master-MPV-OCCT-Windows-64-VC14-opt-test-compare/ http://jenkins-test-occt.nnov.opencascade.com/job/CR32442-master-MPV-OCCT-Debian80-64-opt-test-compare/1/ The second problem (with memory leak) cannot be fixed: - I've checked that the shape in this test (which takes the maximum amount of memory) is created on Open and destroyed on Close - I've checked that OCCT memory allocator (Standard_MMgrRaw) frees all occupied memory blocks during Open and then Close of the document - The Open/Close pair does not always increase the memory usage (due to meminfo call), but once in 5-10 calls; even worse, sometimes I observe decrease of the occupied memory So, I may conclude that the second problem is the problem of "meminfo", or OS, which reserves memory for the process. I propose to exclude "bugs caf bug27604" test from checkings on MacOS. |
|
For integration: OCCT - CR32442 Products - not |
|
Combination - OCCT branch : IR-2022-03-18 master SHA - e720157864e4bb408d607298610b464977491228 49e51745631c52b6c452c65adae4d6dfa21a1b1e Products branch : IR-2022-03-18 SHA - 6db9c4d2fd384d381f9025284eac8b04e33ac8e8 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 18487.460000000385 / 18395.730000000258 [+0.50%] Products Total CPU difference: 11709.300000000132 / 11708.150000000112 [+0.01%] Windows-64-VC14: OCCT Total CPU difference: 20412.546875 / 20350.609375 [+0.30%] Products Total CPU difference: 13181.25 / 13154.5625 [+0.20%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR32442 has been deleted by mnt. SHA-1: 06668c71dab490480b68aa10ae88737559a2aaeb |
occt: master e7201578 2022-03-10 11:57:41 Committer: smoskvin Details Diff |
0032442: Application Framework - Problems of testing on MacOS arm64 platform Fixed the problem of reading XML files on MacOS. 'errno' was not reseted even the 'strtol' function produced a good value. So, now it is erased forcibly before the call. |
Affected Issues 0032442 |
|
mod - src/LDOM/LDOMBasicString.cxx | Diff File | ||
mod - src/OSD/OSD_Directory.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2021-06-15 18:18 | bugmaster | New Issue | |
2021-06-15 18:18 | bugmaster | Assigned To | => mpv |
2021-06-15 18:19 | bugmaster | Relationship added | child of 0032425 |
2021-06-15 18:20 | bugmaster | Description Updated | |
2021-06-15 19:18 | kgv | Summary | Application Framework: Problems of testing on MacOS arm64 platform => Application Framework - Problems of testing on MacOS arm64 platform |
2021-06-16 13:32 | bugmaster | Status | new => assigned |
2021-08-31 18:28 | mpv | Target Version | 7.6.0 => 7.7.0 |
2022-03-10 11:57 | git | Note Added: 0107252 | |
2022-03-10 16:41 | mpv | Assigned To | mpv => vro |
2022-03-10 16:41 | mpv | Status | assigned => resolved |
2022-03-10 16:41 | mpv | Steps to Reproduce Updated | |
2022-03-10 16:41 | mpv | Note Added: 0107256 | |
2022-03-17 20:13 | vro | Assigned To | vro => bugmaster |
2022-03-17 20:13 | vro | Status | resolved => reviewed |
2022-03-17 20:13 | vro | Note Added: 0107338 | |
2022-03-19 10:20 | smoskvin | Status | reviewed => tested |
2022-03-19 10:20 | smoskvin | Note Added: 0107363 | |
2022-03-19 10:27 | smoskvin | Test case number | => Not required |
2022-03-19 16:35 | smoskvin | Changeset attached | => occt master e7201578 |
2022-03-19 16:35 | mpv | Assigned To | bugmaster => mpv |
2022-03-19 16:35 | mpv | Status | tested => verified |
2022-03-19 16:35 | mpv | Resolution | open => fixed |
2022-03-19 17:18 | git | Note Added: 0107366 |