0032442: Application Framework - Problems of testing on MacOS arm64 platform

Fixed the problem of reading XML files on MacOS. 'errno' was not reseted
even the 'strtol' function produced a good value. So, now it is erased
forcibly before the call.